Fleet UI: Scrollable dropdown, ensure z-index (#43515)
## Issue
Closes #42655

## Description
- Will need cherry-pick into 4.84.0 RC
- Whackamole issue that popped up when changing the overflow
- Ensured DOM/z-index has no issues + dropdown options are scrollable

## Testing

- [x] QA'd all new/changed functionality manually

ub.com/fleetdm/fleet/blob/main/docs/Contributing/workflows/fleetd-development-and-release-strategy.md))

--- a/frontend/components/forms/fields/Dropdown/_styles.scss
+++ b/frontend/components/forms/fields/Dropdown/_styles.scss
@@ -223,8 +223,8 @@
   }
 
   .Select-menu {
-    max-height: none; // Important to scroll in .Select-menu-outer
-    overflow: visible;
+    max-height: 182px; // Scrollable within .Select-menu-outer
+    overflow-y: auto;
   }
 
   .Select-noresults {
